--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 </head>
 <body>
-<h2> Cual es tu promedio?
+<h2> Bienvenido a Nuestro Meson!
 </h2>
 
 <script src="signo.js"> </script>
