--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h2> Bienvenido a Nuestro Meson!
 </h2>
 
-<script src="detallemenu.js"> </script>
+<script src="signo.js"> </script>
 
 </body>
 </html>
