--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     </head>
 </head>
 <body>
-<h2> Bienvenido a Nuestro Meson!
+ 
+ <div id="header" class="header">   
+<h2 id="bienvenidos"> Bienvenido a Nuestro Meson!
 </h2>
+
+</div> 
 
 <div id="divListaMenus">
 
