--- a/index.html
+++ b/index.html
@@ -16,8 +16,24 @@
  <div id="header" class="header">   
 <h2 id="bienvenidos"> Bienvenido a Nuestro Meson!
 </h2>
-
 </div> 
+
+<div id="accion" class="accion">
+
+   <button id="buttonaccion" class="buttonaccion"> RESERVA
+
+   </button> 
+   <button id="buttonaccion" class="buttonaccion"> DETALLES MENU
+
+</button> 
+<button id="buttonaccion" class="buttonaccion"> CUENTA
+
+</button> 
+<button id="buttonaccion" class="buttonaccion"> OTRAS
+
+</button> 
+    
+</div>
 
 <div id="divListaMenus">
 
