--- a/index.html
+++ b/index.html
@@ -20,18 +20,26 @@
 
 <div id="accion" class="accion">
 
+    <div id="opcionReserva" class="accionseccion">
    <button id="buttonaccion" class="buttonaccion"> RESERVA
 
    </button> 
-   <button id="buttonaccion" class="buttonaccion"> DETALLES MENU
+</div>
 
+   <div id="opciondetalleMenu" class="accionseccion">
+   <button id="buttonaccion" class="buttonaccion"> DETALLES MENU
+</div>
 </button> 
+<div id="opcionCuentatotal" class="accionseccion">
 <button id="buttonaccion" class="buttonaccion"> CUENTA
 
 </button> 
+</div>
+<div id="opcionotras" class="accionseccion">
 <button id="buttonaccion" class="buttonaccion"> OTRAS
 
 </button> 
+</div>
     
 </div>
 
