--- a/index.html
+++ b/index.html
@@ -20,22 +20,23 @@
 
 <div id="accion" class="accion">
 
-    <div id="opcionReserva" class="accionseccion">
+    <div id="opcionReserva" class="accionseccion1">
    <button id="buttonaccion" class="buttonaccion"> RESERVA
 
    </button> 
 </div>
 
-   <div id="opciondetalleMenu" class="accionseccion">
+   <div id="opciondetalleMenu" class="accionseccion2">
    <button id="buttonaccion" class="buttonaccion"> DETALLES MENU
-</div>
+
 </button> 
-<div id="opcionCuentatotal" class="accionseccion">
+</div>
+<div id="opcionCuentatotal" class="accionseccion3">
 <button id="buttonaccion" class="buttonaccion"> CUENTA
 
 </button> 
 </div>
-<div id="opcionotras" class="accionseccion">
+<div id="opcionotras" class="accionseccion4">
 <button id="buttonaccion" class="buttonaccion"> OTRAS
 
 </button> 
