--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div id="accion" class="accion">
 
     <div id="opcionReserva" class="accionseccion1">
-   <button id="buttonaccion" class="buttonaccion"> RESERVA
+   <button id="buttonaccionReserva" class="buttonaccion"> RESERVA
 
    </button> 
 </div>
