--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </div>
 
    <div id="opciondetalleMenu" class="accionseccion2">
-   <button id="buttonaccion" class="buttonaccion"> DETALLES MENU
+   <button id="buttonaccionMenu" class="buttonaccion"> DETALLES MENU
 
 </button> 
 </div>
