--- a/index.html
+++ b/index.html
@@ -36,9 +36,13 @@
 
 </button> 
 </div>
-<div id="opcionotras" class="accionseccion4">
-<button id="buttonaccion" class="buttonaccion"> OTRAS
-
+<div id="opciondatosReserva" class="accionseccion4">
+<button id="buttonaccion" class="buttonaccion"> DATOS DE RESERVA
+<input type="text" name="inputNombre" id="inputNombre" placeholder="Ingrese nombre">
+<input type="text" name="inputcantidad" id="inputcantidad" placeholder="Cantidad">
+<input type="text" name="inputDia" id="inputDia" placeholder="Ingrese día de Reserva">
+<input type="text" name="inputHora" id="inputHora" placeholder="Ingrese Horario">
+<button id="botonEnviar">Listo</button>
 </button> 
 </div>
     
