--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <input type="text" name="inputcantidad" id="inputcantidad" placeholder="Cantidad">
 <input type="text" name="inputDia" id="inputDia" placeholder="Ingrese día de Reserva">
 <input type="text" name="inputHora" id="inputHora" placeholder="Ingrese Horario">
-<input type="text" name="inputMail" id="inputMain" placeholder="Ingrese su Email">
+<input type="text" name="inputMail" id="inputMail" placeholder="Ingrese su Email">
 <button id="botonEnviar">Listo</button>
 </button> 
 </div>
