--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
 <button id="botonEnviar">Listo</button>
 </button> 
 </div>
+<div id="opcionReservaAgenda" class="accionseccion5">
+    <button id="buttonaccion" class="buttonaccion"> AGENDA RESERVAS
+    
+    </button> 
+    </div>
     
 </div>
 
