--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </button> 
 </div>
 <div id="opcionReservaAgenda" class="accionseccion5">
-    <button id="buttonaccion" class="buttonaccion"> AGENDA RESERVAS
+    <button id="buttonaccionAgenda" class="buttonaccion"> AGENDA RESERVAS
     
     </button> 
     </div>
