--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
 <div id="accion" class="accion">
 
     <div id="opcionReserva" class="accionseccion1">
-   <button id="buttonaccionReserva" class="buttonaccion"> RESERVA
+   <button id="buttonaccionReserva" class="buttonaccion"> OPCIONES PRINCIPAL
 
    </button> 
 </div>
 
    <div id="opciondetalleMenu" class="accionseccion2">
    <button id="buttonaccionMenu" class="buttonaccion"> DETALLES MENU
+
 
 </button> 
 </div>
@@ -54,7 +55,7 @@
     
 </div>
 
-<div id="divListaMenus">
+<div id="divListaMenus" class="row">
 
 </div>
 
