--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </button> 
 </div>
 <div id="opcionCuentatotal" class="accionseccion3">
-<button id="buttonaccion" class="buttonaccion"> CUENTA
+<button id="buttonaccion" class="buttonaccion"> CUENTA TOTAL
 
 </button> 
 </div>
